--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -1,4 +1,4 @@
-@misc{ wiki:scrm,
+@misc{wiki:scrm,
 	author = "{Wikipedia contributors}",
 	title = "Scrum (software development) --- {Wikipedia}{,} The Free Encyclopedia",
 	year = "2020",
@@ -6,108 +6,108 @@
 	note = "[Online; accessed 10-March-2020]"
 }
 
-@misc{ wiki:framework,
+@misc{wiki:framework,
 	author = "Wikipedia",
 	title = "Framework",
 	year = "2020",
-	url = {https://es.wikipedia.org/wiki/Framework},
-	note = ""
+	howpublished = {\url{https://es.wikipedia.org/wiki/Framework}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ foro:encuesta,
+@misc{foro:encuesta,
 	author = "Wikipedia",
 	title = "Encuesta Forocoches",
 	year = "2020",
-	url = {https://www.forocoches.com/foro/showthread.php?t=7255092&highlight=flutter},
-	note = ""
+	howpublished = {\url{https://www.forocoches.com/foro/showthread.php?t=7255092&highlight=flutter}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:ionnic,
+@misc{wiki:ionnic,
 	author = "Wikipedia",
 	title = "Ionic",
 	year = "2020",
-	url = {https://en.wikipedia.org/wiki/Ionic_(mobile_app_framework)},
-	note = ""
+	howpublished = {\url{https://en.wikipedia.org/wiki/Ionic_(mobile_app_framework)}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:react,
+@misc{wiki:react,
 	author = "Wikipedia",
 	title = "React",
 	year = "2020",
-	url = {https://en.wikipedia.org/wiki/React_Native},
-	note = ""
+	howpublished = {\url{https://en.wikipedia.org/wiki/React_Native}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:xamarin,
+@misc{wiki:xamarin,
 	author = "Wikipedia",
 	title = "Xamarin",
 	year = "2020",
-	url = {https://en.wikipedia.org/wiki/Xamarin},
-	note = ""
+	howpublished = {\url{https://en.wikipedia.org/wiki/Xamarin}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:flutter,
+@misc{wiki:flutter,
 	author = "Wikipedia",
 	title = "Flutter",
 	year = "2020",
-	url = {https://es.wikipedia.org/wiki/Dart},
-	note = ""
+	howpublished = {\url{https://es.wikipedia.org/wiki/Dart}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:firebase,
+@misc{wiki:firebase,
 	author = "Wikipedia",
 	title = "Firebase",
 	year = "2020",
-	url = {https://es.wikipedia.org/wiki/Firebase},
-	note =""
+	howpublished = {\url{https://es.wikipedia.org/wiki/Firebase}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:marketOS,
+@misc{wiki:marketOS,
 	author = "Wikipedia",
 	title = "OS Market Share",
 	year = "2020",
-	url = {https://gs.statcounter.com/os-market-share/desktop-mobile/worldwide/#monthly-200901-202006},
-	note = ""
+	howpublished = {\url{https://gs.statcounter.com/os-market-share/desktop-mobile/worldwide/#monthly-200901-202006}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ google:playservices,
+@misc{google:playservices,
 	author = "Google",
 	title = "Google play services",
 	year = "2020",
-	url = {https://play.google.com/store/apps/details?id=com.google.android.gms&hl=es_419},
-	note = ""
+	howpublished = {\url{https://play.google.com/store/apps/details?id=com.google.android.gms&hl=es_419}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ google:firebase,
+@misc{google:firebase,
 	author = "Google",
 	title = "Firebase Console Google",
 	year = "2020",
-	url = {https://firebase.google.com/docs/database?hl=es},
-	note = ""
+	howpublished = {\url{https://firebase.google.com/docs/database?hl=es}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ google:material,
+@misc{google:material,
 	author = "Google",
 	title = "Google Material Design",
 	year = "2020",
-	url = {https://material.io/design},
-	note = ""
+	howpublished = {\url{https://material.io/design}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ google:apiflutter,
+@misc{google:apiflutter,
 	author = "Google",
 	title = "API flutter",
 	year = "2020",
-	url = {https://api.flutter.dev/},
-	note = ""
+	howpublished = {\url{https://api.flutter.dev/}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ google:pubdev,
+@misc{google:pubdev,
 	author = "Google",
 	title = "Pub dev packages",
 	year = "2020",
-	url = {https://pub.dev/},
-	note = ""
+	howpublished = {\url{https://pub.dev/}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
 
