--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -2,7 +2,7 @@
 
 @misc{noauthor_knime_nodate,
 	title = {{KNIME} {\textbar} {Open} for {Innovation}},
-	url = {https://www.knime.com/},
+	howpublished = {\url{https://www.knime.com/}},
 	urldate = {2020-06-26},
 	file = {KNIME | Open for Innovation:C\:\\Users\\Samuel Casal Cantero\\Zotero\\storage\\RSZLGKBP\\www.knime.com.html:text/html}
 }
@@ -10,151 +10,151 @@
 @misc{noauthor_freelancercom_2020,
 	title = {Freelancer.com},
 	copyright = {Creative Commons Attribution-ShareAlike License},
-	url = {https://es.wikipedia.org/w/index.php?title=Freelancer.com&oldid=124679303},
+	howpublished = {\url{https://es.wikipedia.org/w/index.php?title=Freelancer.com&oldid=124679303}},
 	abstract = {Freelancer.com es una bolsa de trabajo en línea en la que se pueden solicitar servicios de diferentes ramas, destinado a la pequeña y mediana empresa. La empresa tiene su sede en Sídney (Australia) y fue fundada en 2009 por Matt Barrie.[1]​ La compañía también cuenta con oficinas en Londres, Buenos Aires, Manila y Yakarta.},
 	language = {es},
 	urldate = {2020-07-01},
 	journal = {Wikipedia, la enciclopedia libre},
 	month = mar,
 	year = {2020},
-	note = {Page Version ID: 124679303},
+	note = {Page Version ID: 124679303 [último acceso el 20 de julio de 2020]},
 	file = {Snapshot:C\:\\Users\\Samuel Casal Cantero\\Zotero\\storage\\5YIVDVM9\\index.html:text/html}
 }
 
 @misc{noauthor_android_2020,
 	title = {Android version history},
 	copyright = {Creative Commons Attribution-ShareAlike License},
-	url = {https://en.wikipedia.org/w/index.php?title=Android_version_history&oldid=967286357},
+	howpublished = {\url{https://en.wikipedia.org/w/index.php?title=Android_version_history&oldid=967286357}},
 	abstract = {The version history of the Android mobile operating system began with the public release of the Android beta on November 5, 2007. The first commercial version, Android 1.0, was released on September 23, 2008. Android is continually developed by Google and the Open Handset Alliance (OHA), and it has seen several updates to its base operating system since the initial release.},
 	language = {en},
 	urldate = {2020-07-12},
 	journal = {Wikipedia},
 	month = jul,
 	year = {2020},
-	note = {Page Version ID: 967286357},
+	note = {Page Version ID: 967286357 [último acceso el 20 de julio de 2020]},
 	file = {Snapshot:C\:\\Users\\Samuel Casal Cantero\\Zotero\\storage\\U5I9XUBN\\index.html:text/html}
 }
 
-@misc{ wiki:versionAndroid,
-    author = "Wikipedia",
-    title = "Versiones de Android",
-    year = "2020",
-    url = {https://en.wikipedia.org/w/index.php?title=Android_version_history&oldid=967286357},
-    note = "[]"
+@misc{wiki:versionAndroid,
+	author = "Wikipedia",
+	title = "Versiones de Android",
+	year = "2020",
+	howpublished = {\url{https://en.wikipedia.org/w/index.php?title=Android_version_history&oldid=967286357}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:pegi,
+@misc{wiki:pegi,
 	author = "Wikipedia",
 	title = "Sistema de calificación de vieojuegos",
 	year = "2020",
-	url = {https://es.wikipedia.org/wiki/Sistema_de_clasificaci%C3%B3n_de_contenido_de_videojuegos},
-	note = "[]"
+	howpublished = {\url{https://es.wikipedia.org/wiki/Sistema_de_clasificaci%C3%B3n_de_contenido_de_videojuegos}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:portafolio,
+@misc{wiki:portafolio,
 	author = "Wikipedia",
 	title = "Portafolio Digital",
 	year = "2020",
-	url = {https://es.wikipedia.org/wiki/Portafolio_digital},
-	note = "[]"
+	howpublished = {\url{https://es.wikipedia.org/wiki/Portafolio_digital}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
 
-@misc{ wiki:nosql,
+@misc{wiki:nosql,
 	author = "Wikipedia",
 	title = "Base de datos nosql",
 	year = "2020",
-	url = {https://es.wikipedia.org/wiki/NoSQL#Bases_de_datos_tabular},
-	note = "[]"
+	howpublished = {\url{https://es.wikipedia.org/wiki/NoSQL#Bases_de_datos_tabular}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ package:sqlflite,
+@misc{package:sqlflite,
 	author = "pub dev",
 	title = "sqlflite",
 	year = "2020",
-	url = {https://pub.dev/packages/sqflite},
-	note = "[]"
+	howpublished = {\url{https://pub.dev/packages/sqflite}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:mongodb,
+@misc{wiki:mongodb,
 	author = "Wikipedia",
 	title = "MongoDB",
 	year = "2020",
-	url = {https://es.wikipedia.org/wiki/MongoDB},
-	note = "[]"
+	howpublished = {\url{https://es.wikipedia.org/wiki/MongoDB}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:sha1,
+@misc{wiki:sha1,
 	author = "Wikipedia",
 	title = "Secure Hash Algorithm",
 	year = "2020",
-	url = {https://es.wikipedia.org/wiki/Secure_Hash_Algorithm},
-	note = "[]"
+	howpublished = {\url{https://es.wikipedia.org/wiki/Secure_Hash_Algorithm}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
 
-@misc{ github:releases,
+@misc{github:releases,
 	author = {GitHub},
 	title = {Flutter Serpiente Releases},
 	year = "2020",
-	url = {https://github.com/scc0034/flutter_serpiente/releases/tag/V.6.0.0},
-	note = "[]"
+	howpublished = {\url{https://github.com/scc0034/flutter_serpiente/releases/tag/V.6.0.0}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ linkedin:cuenta,
+@misc{linkedin:cuenta,
 	author = {Linkedin},
 	title = {Cuenta Linkedin Samuel Casal},
 	year = "2020",
-	url = {https://www.linkedin.com/in/samuel-casal-cantero-631022188/},
-	note = "[]"
+	howpublished = {\url{https://www.linkedin.com/in/samuel-casal-cantero-631022188/}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ github:repo,
+@misc{github:repo,
 	author = {GitHub},
 	title = {Flutter Serpiente Releases},
 	year = "2020",
-	url = {https://github.com/scc0034/flutter_serpiente},
-	note = "[]"
+	howpublished = {\url{https://github.com/scc0034/flutter_serpiente}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ mailto:mailto,
+@misc{mailto:mailto,
 	author = {Google},
 	title = {Mailto casalyepa@gmail.com},
 	year = "2020",
-	url = {mailto:casalyepa@gmail.com},
-	note = "[]"
+	howpublished = {\url{mailto:casalyepa@gmail.com}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ ubu:page,
+@misc{ubu:page,
 	author = {Ubu},
 	title = {Universidad de Burgos},
 	year = "2020",
-	url = {https://www.ubu.es/},
-	note = "[]"
+	howpublished = {\url{https://www.ubu.es/}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ wiki:bundle,
+@misc{wiki:bundle,
 	author = "Wikipedia",
 	title = "Bundle",
 	year = "2020",
-	url = {https://es.wikipedia.org/wiki/Empaquetado_de_aplicaciones},
-	note = "[]"
+	howpublished = {\url{https://es.wikipedia.org/wiki/Empaquetado_de_aplicaciones}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ xurxodev:bloc,
+@misc{xurxodev:bloc,
 	author = "Jorge Sánchez Fernández",
 	title = "INTRODUCCIÓN AL PATRÓN BLOC",
 	year = "2020",
-	url = {http://xurxodev.com/introduccion-al-patron-bloc/},
-	note = "[]"
+	howpublished = {\url{http://xurxodev.com/introduccion-al-patron-bloc/}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
-@misc{ xurxodev:smi,
+@misc{xurxodev:smi,
 	author = "",
 	title = "Slario mínimo interprofesional",
 	year = "2020",
-	url = {https://www.afiris.es/salario-minimo-interprofesional/},
-	note = "[]"
+	howpublished = {\url{https://www.afiris.es/salario-minimo-interprofesional/}},
+	note = "[último acceso el 20 de julio de 2020]"
 }
 
 
