--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -117,7 +117,7 @@ Las características más importantes son:
 	\item Es un lenguaje de programación respaldado por Google, con lo que esto conlleva. Seguridad, confianza, fiabilidad, APIs distintas: mapas, reconocimiento facial, traductor ...).
 	\item La integración con el sistema operativo Android es mucho más eficaz, ya que este también pertenece a Google.
 	\item Cuando se compila lo hace a nativo, ofreciendo una ganancia de rendimiento.
-	\item La curva de aprendizaje es baja, en el caso de que sepamos Javascript, Typescript o Escmascript. Pero en caso contrario, no es especialmente empinada.
+	\item La curva de aprendizaje es baja, en el caso de que sepamos Javascript, Typescript o Ecmascript. Pero en caso contrario, no es especialmente empinada.
 	\item La calidad de las animaciones y transiciones.
 \end{itemize}
 
@@ -133,7 +133,7 @@ Al final me decanté por este Framework básicamente porque es algo nuevo y disr
 Otra de las cosas que me incentivaron a elegirlo es que la comunidad lo a recibido con los brazos abiertos, como se puede ver en la encuesta, ver figura~\ref{fig:encuesta}, se encuentra entre los favoritos de los desarrolladores.
 
 \subsection{Firebase}
-Firebase~\cite{wiki:firebase} es una plataforma para el desarrollo de aplicaciones web, Android e iOS, creada por Google en el 2014. Esta en la nube, formando el \emph{Google Cloud Plataform}, que consta de un conjunto de herramientas para dotar de una calidad enorme a los proyectos. Ya que permite la integración del ecosistema de Google como un todo.
+Firebase~\cite{wiki:firebase} es una plataforma para el desarrollo de aplicaciones web, Android e iOS, creada por Google en el 2014. Esta en la nube, formando el <<Google Cloud Platform>>, que consta de un conjunto de herramientas para dotar de una calidad enorme a los proyectos. Ya que permite la integración del ecosistema de Google como un todo.
 
 Fue integrada en el proyecto por el hecho de ser un servicio gratuito y que aportaba gran valor a la aplicación. Firebase pasa a ser de pago cuando la app tiene que escalarse a un nivel más grande, por el crecimiento en número de usuarios o la gran cantidad de peticiones que se realicen a la misma. Algunas de las herramientas que integra son de pago, otras no.
 
