--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -143,7 +143,7 @@
 
 @misc{xurxodev:bloc,
 	author = "Jorge Sánchez Fernández",
-	title = "INTRODUCCIÓN AL PATRÓN BLOC",
+	title = "Introducción al patrón bloc",
 	year = "2020",
 	howpublished = {\url{http://xurxodev.com/introduccion-al-patron-bloc/}},
 	note = "[último acceso el 20 de julio de 2020]"
@@ -151,7 +151,7 @@
 
 @misc{xurxodev:smi,
 	author = "",
-	title = "Slario mínimo interprofesional",
+	title = "Salario mínimo interprofesional",
 	year = "2020",
 	howpublished = {\url{https://www.afiris.es/salario-minimo-interprofesional/}},
 	note = "[último acceso el 20 de julio de 2020]"
