--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -388,7 +388,7 @@
 
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
-\noindent D. José Francisco Diez Pastor y D. Cesár García Osorio. profesores del departamento de Ingeniería Informática. área de Lenguajes y Sistemas Informáticos.
+\noindent D. José Francisco Diez Pastor y D. César García Osorio, profesores del departamento de Ingeniería Informática del área de Lenguajes y Sistemas Informáticos.
 \noindent Exponen:
 
 \noindent Que el alumno D. \nombre, con DNI 71301273p, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado \tfg. 
